--- a/readMe
+++ b/readMe
@@ -1,4 +1,5 @@
 Косяки:
 
-Помети: 
+Пометки: 
     Сделать рефакторинг блока #resonsResult
+    /build/index.html - при минимизации убирает пробел в предлажении сайта (h1 - шапка) между предлогом "с" и словом "личным" ("сличным").
